# hy_manipulation_controllers

./: CMakeLists.txt  config.h.in  package.xml
app/: controller_manager_node.cc
examples/: test_standard_scara_controller.cc
include/hy_manipulation_controllers/core/: arm_controller.h  arm_controller_params.h
include/hy_manipulation_controllers/kinematics/: kinematics_solver.h
include/hy_manipulation_controllers/motion_controller/: drag_controller.h  jogging_controller.h  joint_trajectory_controller.h  motion_controller_base.h  static_controller.h
include/hy_manipulation_controllers/utils/: config.h  utils_common.h  version.h
include/hy_picking_controllers/core/: arm_controller.h  arm_controller_base.h  controller_manager.h
include/hy_picking_controllers/utils/: config.h
launch/: start_driver.launch
params/config/: camera_extrinsics.json  camera_intrinsic.yaml  drag_control_parameters.json  joint_control_params.json
params/plotjuggler/: 4dof-plot.xml
params/urdf/: scara.SLDASM.csv
params/urdf/scara.SLDASM/: scara.SLDASM.usd
src/core/: arm_controller.cc  arm_controller_base.cc  controller_manager.cc  joint_trajectory_controller.cc  kinematics_solver.cc  motion_control.cc
src/motion_control/: drag_controller.cc  jogging_controller.cc  joint_trajectory_controller.cc  motion_control.cc  static_controller.cc
src/test/: test_cartesian_pose.cc  test_cartesian_trajectory.cc  test_drag_controller.cc  test_kinematics_node.cc  test_my_scara_controller.cc  test_tag_detector.cc  test_tmp.cc
urdf/: myrobot.urdf
urdf/scara.SLDASM/: scara_temp.usd
